terraform/kubernetes.tf
data "aws_availability_zones" "available" {
  state = "available"
}
resource "aws_iam_role" "eks_cluster" {
  name = "${var.vpc_name}-eks-cluster-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "eks.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "eks_cluster_policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.eks_cluster.name
}

resource "aws_iam_role_policy_attachment" "eks_elb_full_access" {
  policy_arn = "arn:aws:iam::aws:policy/ElasticLoadBalancingFullAccess"
  role       = aws_iam_role.eks_nodes.name
}
# Node Group Role
resource "aws_iam_role" "eks_nodes" {
  name = "${var.vpc_name}-eks-node-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "ec2.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "eks_worker_node_policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.eks_nodes.name
}

resource "aws_iam_role_policy_attachment" "eks_cni_policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.eks_nodes.name
}

resource "aws_iam_role_policy_attachment" "eks_registry_policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.eks_nodes.name
}


resource "aws_eks_cluster" "main" {
  name     = "${var.vpc_name}-cluster"
  role_arn = aws_iam_role.eks_cluster.arn

  vpc_config {
    subnet_ids = concat(aws_subnet.public-kunle-subnet[*].id, aws_subnet.private-kunle-subnet[*].id)
  }

  depends_on = [aws_iam_role_policy_attachment.eks_cluster_policy]
}

resource "aws_eks_node_group" "main" {
  cluster_name    = aws_eks_cluster.main.name
  node_group_name = "main-nodes"
  node_role_arn   = aws_iam_role.eks_nodes.arn
  subnet_ids      = aws_subnet.public-kunle-subnet[*].id

  scaling_config {
    desired_size = 2
    max_size     = 3
    min_size     = 2
  }

  instance_types = ["t3.small"] # EKS nodes usually need more RAM than t2.micro

  depends_on = [
    aws_iam_role_policy_attachment.eks_worker_node_policy,
    aws_iam_role_policy_attachment.eks_cni_policy,
    aws_iam_role_policy_attachment.eks_registry_policy
#   ,aws_route.private_nat # <--- CRITICAL: Wait for internet access
  ]
}




## 1. Create an Elastic IP for the NAT Gateway
#resource "aws_eip" "nat" {
#  domain = "vpc"
#  tags   = { Name = "${var.vpc_name}-nat-eip" }
#}

## 2. Create the NAT Gateway in a PUBLIC subnet
#resource "aws_nat_gateway" "main" {
#  allocation_id = aws_eip.nat.id
#  subnet_id     = aws_subnet.public[0].id # Must be in public!

#  tags = { Name = "${var.vpc_name}-nat" }

#  depends_on = [aws_internet_gateway.main]
#}

## 3. Update the Private Route Table to use the NAT Gateway
#resource "aws_route" "private_nat" {
#  route_table_id         = aws_route_table.private.id
#  destination_cidr_block = "0.0.0.0/0"
#  nat_gateway_id         = aws_nat_gateway.main.id
#}

# Allow EKS Nodes to access PostgreSQL RDS
resource "aws_security_group_rule" "allow_eks_to_rds" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = aws_security_group.private-kunle-sg.id # The RDS SG
  source_security_group_id = aws_eks_cluster.main.vpc_config[0].cluster_security_group_id
}
